--- a/plop/templates/admin/page-index.hbs
+++ b/plop/templates/admin/page-index.hbs
@@ -1,3 +1,3 @@
 /*=============================================== {{>pascalName }}Page exports ===============================================*/
 
-export * from "pages/admin/{{>pascalName }}/{{>pascalName }}"
+export * from "./{{>pascalName }}"
