--- a/plop/templates/types/interface.hbs
+++ b/plop/templates/types/interface.hbs
@@ -1,5 +1,5 @@
 /*=============================================== {{>pascalName }} interface ===============================================*/
 
 export interface I{{>pascalName }} {
-    
+    _id: string
 }
