--- a/plop/templates/model.hbs
+++ b/plop/templates/model.hbs
@@ -1,13 +1,13 @@
 /*=============================================== {{>pascalName }} model ===============================================*/
 
 import { Schema, model } from "mongoose"
-import type { {{>pascalName }} } from "../../shared/types"
+import type { I{{>pascalName }} } from "../../shared/types"
 
-const {{ camelCase name }}Schema = new Schema<{{>pascalName }}>(
+const {{ camelCase name }}Schema = new Schema<I{{>pascalName }}>(
     {
         
     },
     { timestamps: true }
 )
 
-export const {{>pascalName }}Model = model<{{>pascalName }}>("{{>pascalName }}", {{ camelCase name }}Schema)
+export const {{>pascalName }}Model = model<I{{>pascalName }}>("{{>pascalName }}", {{ camelCase name }}Schema)
