Add plop context

--- a/plop/templates/generator.hbs
+++ b/plop/templates/generator.hbs
@@ -1,5 +1,6 @@
 /*=============================================== Generate {{>pascalName}} ===============================================*/
 
+import { BASE_CLIENT_PATH, TEMPLATES_PATH } from "../utils/index.js"
 import type { NodePlopAPI } from "plop"
 
 export default (plop: NodePlopAPI) => {
