--- a/plop/templates/context/index.ts.hbs
+++ b/plop/templates/context/index.ts.hbs
@@ -1,4 +1,3 @@
 /*=============================================== Exports ===============================================*/
 
-export * from "./auth"
-/* Prepend export - DO NOT REMOVE */
+export * from "./{{ kebabCase name }}.context"
