--- a/plop/templates/component/{{pascalCase name}}.tsx.hbs
+++ b/plop/templates/component/{{pascalCase name}}.tsx.hbs
@@ -1,28 +1,10 @@
-{{#if forward}}
-
-
-import { forwardRef } from "react"
 import { Styled{{>pascalName }} } from "./styles"
 import type { I{{>pascalName }} } from "./types"
 
-export const {{>pascalName }} = forwardRef<HTML{{ pascalCase attribute }}Element, I{{>pascalName }}>(({ }, ref) => {
+export const {{>pascalName }}: FC<I{{>pascalName }}> = ({ {{#if forward}}ref,{{/if}} }) => {
     return (
-        <Styled{{>pascalName }} ref={ref}>
-            
-        </Styled{{>pascalName }}>
-    )
-})
-{{else}}
-
-
-import { Styled{{>pascalName }} } from "./styles"
-import type { I{{>pascalName }} } from "./types"
-
-export const {{>pascalName }}: FC<I{{>pascalName }}> = ({ }) => {
-    return (
-        <Styled{{>pascalName }}>
+        <Styled{{>pascalName }}{{#if forward}} ref={ref}{{/if}}>
             
         </Styled{{>pascalName }}>
     )
 }
-{{/if}}
